# civ7-archipelago

./: .gitignore  LICENSE  README.md  civilization_vii.yaml  pyproject.toml
apworld/: Items.py  Locations.py  Options.py  Regions.py  Rules.py  __init__.py
apworld/data/: antiquity_civics.py  antiquity_techs.py  bundles.py  civ_uniques.py  exploration_civics.py  exploration_techs.py  extras.py  legacy_paths.py  modern_civics.py  modern_techs.py  nodes.py  registry.py
client/: Civ7Client.py  TunerClient.py
docs/: CIV7_MODDING_LESSONS.md  CIV7_RUNTIME_REFERENCE.md  DESIGN.md  smoke-test-setup.md
mod/: archipelago.modinfo
tests/: _check_decoration_state.js  _copy_et_cetera_overrides.py  _drain_ap.js  _dump_archive_locs.py  _extract_engine_events.py  _grant_pottery.js  _inject_tree_decorator.js  _inject_tree_decorator_v2.js  _inspect_archive.py  _inspect_loc_codes.py  _js_syntax_check.js  _lookup_loc_info.js  _probe_canonical_listeners.js  _probe_card_structure.js  _probe_card_v2_full.js  _probe_civ.js  _probe_class_hashes.js  _probe_custom_elements.js  _probe_dom_structure.js  _probe_hashes_final.js  _probe_locale_resolution.js  _probe_lp_state.js  _probe_mastery_render.js  _probe_narrative_listeners.js  _probe_notif_type.js  _probe_ops.js  _probe_surface.js  _probe_tree_node_render.js  _probe_ui_and_modifiers.js  _probe_unique2.js  _probe_unique_buildings.js  _probe_views.js  _probe_wider_listeners.js  _test_setget_loc.js  _validate_modinfo.py  build_hidden_nodes_xml.py  build_mod_item_map.py  count_pools.py  extract_civ7_data.py  orchestrate_test.py  (+7 more)
(+26 files in other folders)
