[project]
name = "civ7-archipelago"
version = "0.1.0"
description = "Archipelago multiworld randomizer integration for Sid Meier's Civilization VII"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
